--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,33 @@ addons:
 before_install:
   - mysql -e 'CREATE DATABASE lockmgr;'
 env:
-  - DB_BACKEND=mysql DB_USER=root DB_NAME=lockmgr
+  - DB_BACKEND=mysql DB_USER=root DB_NAME=lockmgr CODECOV_TOKEN=3e9eb52c-c56b-46cc-b1ae-34dae6c2b386
+    PIP_ARGS=
+
 language: python
-python:
-  - "3.6"
-  - "3.7"
-  - "3.7-dev"
-  - "3.8-dev"
-  - "nightly"
+matrix:
+  include:
+    - python: 3.6
+      env: DJANGO_VERSION="Django==1.10.*"
+    - python: 3.6
+      env: DJANGO_VERSION="Django==1.11.*"
+    - python: 3.6
+      env: DJANGO_VERSION="Django==2.0.*"
+    - python: 3.6
+      env: DJANGO_VERSION="Django==2.1.*"
+    - python: 
+        - 3.6
+        - 3.7
+        - 3.8
+        - 3.8-dev
+      env: DJANGO_VERSION="Django==2.2.*"
+    - python: nightly
+      env: DJANGO_VERSION="Django" PIP_ARGS="--pre"
+
 install:
   - pip install -r requirements.txt -U
   - pip install .
-script: ./manage.py test
-
+  - pip install $PIP_ARGS "$DJANGO_VERSION"
+script: ./manage.py test --with-coverage --cover-package lockmgr
+after_success:
+  - codecov
