--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ matrix:
         - 3.8-dev
       env: DJANGO_VERSION="Django==2.2.*"
     - python: nightly
-      env: DJANGO_VERSION="Django" PIP_ARGS="--pre"
+      env: DJANGO_VERSION="Django" PIP_ARGS="--pre -U"
 
 install:
   - pip install -r requirements.txt -U
